# CCL-SDD-HMI-demo

./: README.md  SDD_read.me.txt  package-lock.json  페이지별 기능명세서.txt
.cursor/rules/: sdd-rules.mdc
SDD-demo/: Dockerfile  Dockerfile.service  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
SDD-demo/app/: globals.css  layout.tsx  middleware.ts  page.tsx
SDD-demo/components/: audit-log-viewer.tsx  backup-schedule-management.tsx  coil-map-chart.tsx  coil-unrolled-view.tsx  defect-image-viewer.tsx  permission-management.tsx  protected-route.tsx  real-time-video-panel.tsx  theme-provider.tsx
SDD-demo/contexts/: auth-context.tsx
SDD-demo/database/: 01_core_schema.sql
SDD-demo/docs/: integrated-system-architecture.md  real-time-image-streaming.md
SDD-demo/hooks/: use-live-image.ts  use-websocket.ts
SDD-demo/lib/: auth-middleware.ts  auth.ts  session.ts
SDD-demo/mes-tcp-service/: main.py  pyproject.toml
SDD-demo/mes-tcp-service/app/adapters/storage/: postgresql_repository.py
SDD-demo/mes-tcp-service/app/application/: use_case.py
SDD-demo/scripts/: hash-passwords.js  start-services.sh  stop-services.sh
SDD-demo/services/: defect-data-receiver-service.js  image-receiver-service.js  mes-socket-service.js  service-orchestrator.js
ai-models/: README.md
demo-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo-app/src/: App.tsx  index.css
docs/: README.md  ai-integration.md
docs/api/: README.md  ai-results.md  data-models.md  defects.md  models.md  schedules.md
(+88 files in other folders)
