[project]
name = "mes-tcp-service"
version = "1.0.0"
description = "인이지 TCP 서비스 - PostgreSQL 연동"
authors = [
    {name = "CCL SDD Team"}
]
dependencies = [
    "asyncpg>=0.29.0",
    "asyncio-mqtt>=0.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 